Fixed footer alignment

--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -26,6 +26,7 @@ h1, h2, h3, h4, h5 { margin: 0 0 1em; }
 h1 {
 	color: #5c330b;
 	font-size: 30px;
+	margin-bottom:20px;
 	text-shadow: 0 1px rgba(255, 255, 255, 0.5);
 }
 h2 { font-size: 24px; }
@@ -58,9 +59,9 @@ input[type="text"], input[type="password"], textarea {
 	border: 1px solid #bfc4c4;
 	border-radius: 10px;
 	-moz-border-radius: 10px;
-	box-shadow: inset 0 2px 4px rgba(0, 0, 0, .15);
-	-moz-box-shadow: inset 0 2px 4px rgba(0, 0, 0, .15);
-	-webkit-box-shadow: inset 0 2px 4px rgba(0, 0, 0, .15);
+	box-shadow: inset 0 1px 3px rgba(0, 0, 0, .35);
+	-moz-box-shadow: inset 0 1px 3px rgba(0, 0, 0, .35);
+	-webkit-box-shadow: inset 0 1px 3px rgba(0, 0, 0, .35);
 	font-family: 'Myriad Pro', Arial, sans-serif;
 	font-size: 18px;
 	margin-bottom: 15px;
@@ -504,7 +505,7 @@ body > footer p {
 }
 body > footer ul {
 	float: right;
-	margin: 4px 0;
+	margin: 0;
 }
 body > footer ul li, body > footer ul li form { display: inline; }
 body > footer ul li { margin-left: 10px; }
